--- a/index.html
+++ b/index.html
@@ -13,27 +13,31 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Your Name Here</h1>
+        <h1 class='masthead-heading'>Alexis García</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a 29-year-old woman looking forward to becoming a coder.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>San Clemente California</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>painting and embroidering</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Fashion designer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Mexico City</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To earn more money.</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
           <li><a href="http://www.github.com/usernamehere">Github</a></li>
         </ul>
+    </footer>
+</body>
+
+</html>
     </footer>
 </body>
 
